kubernetes/spack/www-spack-io/web/deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spack-io
  namespace: spack
  labels:
    app: spack-io
    srv: web
spec:
  selector:
    matchLabels:
      app: spack-io
      srv: web
  replicas: 2
  template:
    metadata:
      labels:
        app: spack-io
        srv: web
    spec:
      containers:
      - name: web
        image: "spack/spack.io:latest"
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
