kubernetes/spack/www-spack-io/web/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: spack-io
  namespace: spack
  labels:
    app: spack-io
    srv: web
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: spack-io
    srv: web

---
apiVersion: v1
kind: Service
metadata:
  name: spack-io-redirect
  namespace: spack
  labels:
    app: spack-io
    srv: web-redirect
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: spack-io
    srv: web-redirect
